<!--
  Copyright 2022 The Android Open Source Project
  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->
<resources>
    <string name="app_name">PlanEat</string>
    <string name="tab_search">Discover</string>
    <string name="tab_agenda">Agenda</string>

    <string name="search">Search</string>

    <string name="edit">Edit</string>

    <string name="back_button">Back</string>
    <string name="more_options_button">More options</string>

    <string name="search_placeholder">Tartiflette, Ramen, Crêpes…</string>
    <string name="tab_saved">Favorites</string>
    <string name="tab_shopping_list">List</string>
    <string name="favorite">Favorite</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Instructions</string>
    <string name="add">add recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <plurals name="items">
        <item quantity="zero">%1$d item</item>
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>
    <string name="sort_by">Sort by:</string>
    <string name="aisle">Aisle</string>
    <string name="recipe">Recipe</string>
    <string name="add_an_item">Add an item</string>
    <string name="go_back">Go back</string>
    <string name="carrots_eggs_chocolate">Carrots, Eggs, Chocolate…</string>
    <string name="custom">Custom</string>
    <string name="validated_ingredients">Validated Ingredients</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="add_recipe">Add recipe</string>
    <string name="my_recipe">My recipe</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="remove_from_agenda">Remove from agenda</string>
    <string name="remove_from_agenda_confirmation">This will remove the recipe from your agenda and recipe list.</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <plurals name="_1_ingredients">
        <item quantity="zero">%1$d ingrédient</item>
        <item quantity="one">%1$d ingrédient</item>
        <item quantity="other">%1$d ingrédients</item>
    </plurals>
    <string name="my_favorites">My favorites</string>
    <string name="new_recipes">New recipes</string>
    <string name="pick_image">Pick image</string>
    <string name="url">URL</string>
    <string name="import_from_url">Import from URL</string>
    <string name="title">Title</string>
    <string name="kind_of_meal">Kind of Meal</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="season">Season (optional)</string>
    <string name="tags">Tags</string>
    <string name="save">Save</string>
    <string name="add_to_recipes">Add to recipes</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="plan_it">Plan it</string>
    <string name="step">Step %1$s</string>
    <string name="see_more">See more</string>
    <string name="my_recipes">My recipes</string>
    <string name="today">Today</string>
    <string name="you_may_like">You may like</string>
    <plurals name="recipes">
        <item quantity="zero">%1$d recipe</item>
        <item quantity="one">%1$d recipe</item>
        <item quantity="other">%1$d recipes</item>
    </plurals>
    <string name="tag_all">All</string>
    <string name="tag_easy">Easy</string>
    <string name="tag_medium">Medium</string>
    <string name="tag_hard">Hard</string>
    <string name="tag_appetizer">Appetizer</string>
    <string name="tag_healthy">Healthy</string>
    <string name="tag_middle_eastern">Middle Eastern</string>
    <string name="tag_asian">Asian</string>
    <string name="tag_vegetarian">Vegetarian</string>
    <string name="tag_desserts">Desserts</string>
    <string name="tag_comfort_food">Comfort Food</string>
    <string name="tag_european">European</string>
    <string name="tag_bakery">Bakery</string>
    <string name="tag_seafood">Seafood</string>
    <string name="tag_american">American</string>
    <string name="tag_drinks">Drinks</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="discover">Discover</string>
    <string name="add_to_agenda">Add to agenda</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="shopping_list_placeholder">Manually add your ingredients or add a new recipe to your agenda to automatically add it to the shopping list</string>
    <string name="planify_a_recipe">Planify a recipe</string>
    <string name="create_a_recipe">Create a recipe</string>
    <string name="edited">Edited</string>
    <string name="my_creations">My creations</string>
    <string name="add_image">Add photo</string>
    <string name="add_a_title_to_your_recipe">Add a title to your recipe</string>
    <string name="hours">hours</string>
    <string name="add_step">Add step</string>
    <string name="remove_tag">Remove tag</string>
    <string name="favorites">Favorites</string>
    <string name="description">Description</string>
    <string name="validate">Validate</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="step_d_of_4">Step %1$d of 4</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="choose_1_or_more_categorie_s">Choose 1 or more categorie(s)</string>
    <string name="choose_a_difficulty">Choose a difficulty</string>
    <string name="choose">Choose</string>
    <string name="add_a_picture_optional">Add a picture (optional)</string>
</resources>