...
                        SearchBarDefaults.InputField(
                            modifier = Modifier
                                .border(1.dp,
                                    if (expanded) primaryLight else Color(0x00000000),
                                    RoundedCornerShape(100.dp)
                                )
                                .testTag("search_input")
                                .focusRequester(focusRequester)
                                .padding(start = 8.dp),
                            query = text,
                            onQueryChange = {
                                text = it
                            },
...
